# FamilyGamesII

./: .cursorrules  .env.example  .gitignore  .impeccable.md  BUGFIX_SUMMARY.md  COMPREHENSIVE_REPORT.md  DATA_ENHANCEMENT_SUMMARY.md  DATA_INTEGRATION.md  DEPLOYMENT.md  ENHANCEMENTS.md  ENHANCEMENT_PLAN.md  GROQ_API_SETUP.md  MERGE_PREPARATION.md  Notes.md  README.md  RENDER_DEPLOYMENT.md  SOUND_REPLACEMENT_NOTE.md  UI_UX_REVIEW.md  app.py  build.sh  config.py  game.py  game_data.db  gemini-session-state.md  package-lock.json  package.json  pulse.config.json  pyproject.toml  render.yaml  requirements.txt  setup.ps1  smoke-findings.json  test-output.txt  test_bus_complete.py  test_data_service.py  test_enhanced_data.py  verify_convex_init.py  verify_env.py
.cursor/rules/: pulse.mdc
.github/: copilot-instructions.md
.pulse/: state.json
convex/: cleanup.ts  contentSeeder.ts  crons.ts  gameState.ts  helpers.ts  reactions.ts  rooms.ts  schema.ts
design/: reuse-prompt.md  theme-guide.md  theme-snippet.css
games/: __init__.py  base.py  registry.py
models/: game_items.py
scripts/: README.md  buildContent.mjs  fetchTmdb.mjs  seedContent.mjs
services/: __init__.py  data_manager.py  data_service.py  game_room_service.py  realtime_sync.py  timer_manager.py
templates/: base.html  game.html  game.html.bak  game_org.html  index.html  lobby.html
tests/: __init__.py  conftest.py  smoke_multiplayer_runner.py  test_integration.py  test_integration_rapid_fire.py  test_rapid_fire.py  test_regression.py  test_riddles.py  test_timer_manager.py  test_twenty_questions.py
(+94 files in other folders)
