[project]
name = "flask-app"
version = "0.1.0"
description = "A simple Flask application."

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "blinker==1.9.0",
    "beautifulsoup4==4.12.3",
    "click==8.1.8",
    "colorama==0.4.6",
    "Flask==3.1.0",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "SQLAlchemy==2.0.25",
    "Werkzeug==3.1.3",
    "lxml==5.1.0",
    "groq",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
